@@ -28,40 +28,40 @@
 
              Contributors (of bug reports and suggestions) include:
 
-    Elias Kritikos          Neil Kazaross           James Rech
-    Misja Alma              Mathias Kegelmann       Jared Riley
-    Christian Anthon        Matija Kejzar           Klaus Rindholt
-    Kazuaki Asai            Bert Van Kerckhove      Oliver Riordan
-    Eric Augustine          James F. Kibler         Hans-Juergen Schaefer
-    Erik Barfoed            Johnny Kirk             Steve Schreiber
-    Ron Barry               Gerhard Knop            Hugh Sconyers
-    Steve Baedke            Robert Konigsberg       Martin Schrode
-    Stefan van den Berg     Martin Krainer          Paul Selick
-    Chuck Bower             Corrin Lakeland         Sho Sengoku
-    Adrian Bunk             Tim Laursen             Ian Shaw
-    Nick Bratby             Eli Liang               Alberta di Silvio
-    Craig Campbell          Ege Lundgren            Peter Sochovsky
-    John Chuang             Kevin Maguire           Mark Spencer
-    Tristan Colgate         Massimiliano Maini      Scott Steiner
-    Olivier Croisille       Giulio De Marco         Maik Stiebler
-    Ned Cross               John Marttila           W. Stroop (Rob)
-    Bill Davidson           Alix Martin             Yoshito Takeuchi
-    Michael Depreli         William Maslen          Jacques Thiriat
-    Ian Dunstan             Joachim Matussek        Malene Thyssen
-    Max Durbano             Thomas Meyer            Claes Tornberg
-    Peter Eberhard          Daniel Murphy           Sander van Rijnswou
-    Robert Eberlein         Magnar Naustdalslid     Robert-Jan Veldhuizen
-    Fotis                   Dave Neary              Morten Wang
-    Kennedy Fraser          Rolf Nielsen            Jeff White
-    Ric Gerace              Mirori Orange           JP White
-    Michel Grimminck        Peter Orum              Mike Whitton
-    Eric Groleau            Roy Passfield           Chris Wilson
-    Jeff Haferman           Thomas Patrick          Kit Woolsey
-    Morten Juul Henriksen   Billie Patterson        Frank Worrell
-    Alain Henry             Zvezdan Petkovic        Christopher D. Yep
-    Jens Hoefkens           Petri Pitkanen          Anders Zachrison
+    Elias Kritikos          Nis Jorgensen           Henrik Ravn
+    Misja Alma              Neil Kazaross           James Rech
+    Christian Anthon        Mathias Kegelmann       Jared Riley
+    Kazuaki Asai            Matija Kejzar           Klaus Rindholt
+    Eric Augustine          Bert Van Kerckhove      Oliver Riordan
+    Erik Barfoed            James F. Kibler         Hans-Juergen Schaefer
+    Ron Barry               Johnny Kirk             Steve Schreiber
+    Steve Baedke            Gerhard Knop            Hugh Sconyers
+    Stefan van den Berg     Robert Konigsberg       Martin Schrode
+    Chuck Bower             Martin Krainer          Paul Selick
+    Adrian Bunk             Corrin Lakeland         Sho Sengoku
+    Nick Bratby             Tim Laursen             Ian Shaw
+    Craig Campbell          Eli Liang               Alberta di Silvio
+    John Chuang             Ege Lundgren            Peter Sochovsky
+    Tristan Colgate         Kevin Maguire           Mark Spencer
+    Olivier Croisille       Massimiliano Maini      Scott Steiner
+    Ned Cross               Giulio De Marco         Maik Stiebler
+    Bill Davidson           John Marttila           W. Stroop (Rob)
+    Michael Depreli         Alix Martin             Yoshito Takeuchi
+    Ian Dunstan             William Maslen          Jacques Thiriat
+    Max Durbano             Joachim Matussek        Malene Thyssen
+    Peter Eberhard          Thomas Meyer            Claes Tornberg
+    Robert Eberlein         Daniel Murphy           Sander van Rijnswou
+    Fotis                   Magnar Naustdalslid     Robert-Jan Veldhuizen
+    Kennedy Fraser          Dave Neary              Morten Wang
+    Ric Gerace              Rolf Nielsen            Jeff White
+    Michel Grimminck        Mirori Orange           JP White
+    Eric Groleau            Peter Orum              Mike Whitton
+    Jeff Haferman           Roy Passfield           Chris Wilson
+    Morten Juul Henriksen   Thomas Patrick          Kit Woolsey
+    Alain Henry             Billie Patterson        Frank Worrell
+    Jens Hoefkens           Zvezdan Petkovic        Christopher D. Yep
+    Casey Hopkins           Petri Pitkanen          Anders Zachrison
     Martin Janke            Sam Pottle              Douglas Zare
-    Nis Jorgensen           Henrik Ravn
 
 
   Credit is also due to those who have published information about backgammon
