@@ -86,6 +86,7 @@ credEntry ceCredits[] = {
   {"Jeff Haferman", 0},
   {"Alain Henry", 0},
   {"Jens Hoefkens", 0},
+  {"Casey Hopkins", 0},
   {"Martin Janke", 0},
   {"Rick Janowski", 0},
   {"Nis Jorgensen", 0},
@@ -201,40 +202,40 @@ char aszAUTHORS[] =
 "\n"
 "             Contributors (of bug reports and suggestions) include:\n"
 "\n"
-"    Elias Kritikos          Neil Kazaross           James Rech\n"
-"    Misja Alma              Mathias Kegelmann       Jared Riley\n"
-"    Christian Anthon        Matija Kejzar           Klaus Rindholt\n"
-"    Kazuaki Asai            Bert Van Kerckhove      Oliver Riordan\n"
-"    Eric Augustine          James F. Kibler         Hans-Juergen Schaefer\n"
-"    Erik Barfoed            Johnny Kirk             Steve Schreiber\n"
-"    Ron Barry               Gerhard Knop            Hugh Sconyers\n"
-"    Steve Baedke            Robert Konigsberg       Martin Schrode\n"
-"    Stefan van den Berg     Martin Krainer          Paul Selick\n"
-"    Chuck Bower             Corrin Lakeland         Sho Sengoku\n"
-"    Adrian Bunk             Tim Laursen             Ian Shaw\n"
-"    Nick Bratby             Eli Liang               Alberta di Silvio\n"
-"    Craig Campbell          Ege Lundgren            Peter Sochovsky\n"
-"    John Chuang             Kevin Maguire           Mark Spencer\n"
-"    Tristan Colgate         Massimiliano Maini      Scott Steiner\n"
-"    Olivier Croisille       Giulio De Marco         Maik Stiebler\n"
-"    Ned Cross               John Marttila           W. Stroop (Rob)\n"
-"    Bill Davidson           Alix Martin             Yoshito Takeuchi\n"
-"    Michael Depreli         William Maslen          Jacques Thiriat\n"
-"    Ian Dunstan             Joachim Matussek        Malene Thyssen\n"
-"    Max Durbano             Thomas Meyer            Claes Tornberg\n"
-"    Peter Eberhard          Daniel Murphy           Sander van Rijnswou\n"
-"    Robert Eberlein         Magnar Naustdalslid     Robert-Jan Veldhuizen\n"
-"    Fotis                   Dave Neary              Morten Wang\n"
-"    Kennedy Fraser          Rolf Nielsen            Jeff White\n"
-"    Ric Gerace              Mirori Orange           JP White\n"
-"    Michel Grimminck        Peter Orum              Mike Whitton\n"
-"    Eric Groleau            Roy Passfield           Chris Wilson\n"
-"    Jeff Haferman           Thomas Patrick          Kit Woolsey\n"
-"    Morten Juul Henriksen   Billie Patterson        Frank Worrell\n"
-"    Alain Henry             Zvezdan Petkovic        Christopher D. Yep\n"
-"    Jens Hoefkens           Petri Pitkanen          Anders Zachrison\n"
+"    Elias Kritikos          Nis Jorgensen           Henrik Ravn\n"
+"    Misja Alma              Neil Kazaross           James Rech\n"
+"    Christian Anthon        Mathias Kegelmann       Jared Riley\n"
+"    Kazuaki Asai            Matija Kejzar           Klaus Rindholt\n"
+"    Eric Augustine          Bert Van Kerckhove      Oliver Riordan\n"
+"    Erik Barfoed            James F. Kibler         Hans-Juergen Schaefer\n"
+"    Ron Barry               Johnny Kirk             Steve Schreiber\n"
+"    Steve Baedke            Gerhard Knop            Hugh Sconyers\n"
+"    Stefan van den Berg     Robert Konigsberg       Martin Schrode\n"
+"    Chuck Bower             Martin Krainer          Paul Selick\n"
+"    Adrian Bunk             Corrin Lakeland         Sho Sengoku\n"
+"    Nick Bratby             Tim Laursen             Ian Shaw\n"
+"    Craig Campbell          Eli Liang               Alberta di Silvio\n"
+"    John Chuang             Ege Lundgren            Peter Sochovsky\n"
+"    Tristan Colgate         Kevin Maguire           Mark Spencer\n"
+"    Olivier Croisille       Massimiliano Maini      Scott Steiner\n"
+"    Ned Cross               Giulio De Marco         Maik Stiebler\n"
+"    Bill Davidson           John Marttila           W. Stroop (Rob)\n"
+"    Michael Depreli         Alix Martin             Yoshito Takeuchi\n"
+"    Ian Dunstan             William Maslen          Jacques Thiriat\n"
+"    Max Durbano             Joachim Matussek        Malene Thyssen\n"
+"    Peter Eberhard          Thomas Meyer            Claes Tornberg\n"
+"    Robert Eberlein         Daniel Murphy           Sander van Rijnswou\n"
+"    Fotis                   Magnar Naustdalslid     Robert-Jan Veldhuizen\n"
+"    Kennedy Fraser          Dave Neary              Morten Wang\n"
+"    Ric Gerace              Rolf Nielsen            Jeff White\n"
+"    Michel Grimminck        Mirori Orange           JP White\n"
+"    Eric Groleau            Peter Orum              Mike Whitton\n"
+"    Jeff Haferman           Roy Passfield           Chris Wilson\n"
+"    Morten Juul Henriksen   Thomas Patrick          Kit Woolsey\n"
+"    Alain Henry             Billie Patterson        Frank Worrell\n"
+"    Jens Hoefkens           Zvezdan Petkovic        Christopher D. Yep\n"
+"    Casey Hopkins           Petri Pitkanen          Anders Zachrison\n"
 "    Martin Janke            Sam Pottle              Douglas Zare\n"
-"    Nis Jorgensen           Henrik Ravn\n"
 "\n"
 "\n"
 "  Credit is also due to those who have published information about backgammon\n"
